basic layout for html

--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-	<meta charset="UTF-8"/>
-	<meta name="viewport" content="user-scalable=no width=device-width, 
-		initial-scale=1.0 maximum-scale=1, minimum-scale=1/>
-	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<title>AS Records</title>
+  <html>
+    <head>
+      <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
-	<script src="init.js"></script>									     
-</head>
-<body>
-    <div class="results-bar">
-  <p>Count of Results:</p>
-  <span id="num-results" class="results-bar__count"></span>
-</div>
-<table class="table table-striped">
-  <thead class="thead">
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Position</th>
-      <th>Manager</th>
-      <th>Salary</th>
-    </tr>
-  </thead>
-  <tbody id='employees'></tbody>
-</table>
-                             
-</body>
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    </head>
+
+    <body>
+
+      <!--JavaScript at end of body for optimized loading-->
+      <script type="text/javascript" src="js/materialize.min.js"></script>
+    </body>
+  </html>
